html/css login ok, liens header bons so far

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="leToutHaut">
-            <div class="flex justifyAround">
+            <div class="flex justifyBetween">
                 <div>
-                    <p>Bienvenue, 
+                    <p class="ml1">Bienvenue, 
                         <span id="nomHeader">
     
                         </span>
@@ -34,6 +34,11 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="flex justifyEvenly boxLinks">
+            <a href="../index.html" class="linkHeader">Accueil</a>
+            <a href="#" class="linkHeader">Fourm</a>
+            <a href="./login.html" class="linkHeader">Login</a>
         </div>
     </header>
 
